--- a/Solution/package.nuspec
+++ b/Solution/package.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>maglev.project.unittests</id>
+    <id>maglev.solution</id>
     <version>1.0.0-a</version>
     <title>Unit Test Project Template</title>
     <authors>eric hexter</authors>
@@ -9,8 +9,8 @@
     <projectUrl>https://github.com/erichexter/MagLev</projectUrl>
     <copyright>Copyright 2012</copyright>
     <description>A project template for a ASP.Net MVC project in the MagLev solution</description>
+    <dependencies>
+      <dependency id="SolutionFactory" />
+    </dependencies>
   </metadata>
-  <dependencies>
-    <dependency id="SolutionFactory" />
-  </dependencies>
 </package>
