installs into mvc project.. one namespace is missing in a unit test

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>c12258d0-dd3d-4e47-922c-82acae1108fb</ProjectGuid>
+    <ProjectGuid>{1BC3A0A9-B875-47E7-A0BF-1288F3EF9368}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Core</RootNamespace>
