--- a/redstone.nuspec
+++ b/redstone.nuspec
@@ -14,6 +14,6 @@
     </dependencies>
   </metadata>
  <files>
- 	<file src="Solution\tools" target="tools"/>
+ 	<file src="Solution\tools\**\*.*" target="tools"/>
  </files>
 </package>
