--- a/redstone.nuspec
+++ b/redstone.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Redstone.solution</id>
+    <id>Redstone</id>
     <version>1.0.0-a</version>
     <title>Unit Test Project Template</title>
     <authors>eric hexter</authors>
